working AJAX interaction in both directions (faders only for now).

--- a/lv2rdf2html.css
+++ b/lv2rdf2html.css
@@ -5,6 +5,13 @@
 div {
   border: 1px grey dotted;
 }
+div#ajaxDebug {
+  position: fixed;
+  width: 36em;
+  right: 1em;
+  top: 1em;
+  background-color: #aaaa00;
+}
 div.pluginGUI {
   display: table;
 }
