--- a/lv2rdf2html.css
+++ b/lv2rdf2html.css
@@ -31,11 +31,15 @@ div#ajaxLog div {
 }
 div#ajaxTX { height: 3em; }
 div#ajaxRX { height: 10em; }
+
 div.pluginGUI {
   display: table;
+  width: 35.5em;
+  max-width: 35.5em;
 }
 div.pluginGUI h1 {
   display: table-row;
+  font-size: 120%;
 }
 form { 
   display: row-group; 
@@ -58,8 +62,8 @@ div.slider {
   width: 11em;
 }
 input.value, div.range {
-  width: 11ex;
-  max-width: 11ex;
+  width: 6em;
+  max-width: 6em;
   text-align: right;
   margin-left: 1ex;
   display: inline-block;
@@ -70,7 +74,7 @@ div.range {
 }
 div.unit {
   display: table-cell;
-  width: 6em;
+  width: 4em;
 }
 div.comment {
   display: table-cell;
