display internal symbol names as tooltip over ports (necessary for JACK connects)

--- a/lv2rdf.css
+++ b/lv2rdf.css
@@ -21,6 +21,12 @@ div.info, div.ports {
 div.info p, div.ports p {
   padding: 0 0 0 1em;
 }
+div.ports p span {
+  display: inline-block;
+  border: 1px solid black;
+  padding: 0 1ex;
+  margin: 0 1ex;
+}
 fieldset {
   padding: 0;
   margin: 0;
