--- a/lv2rdf.css
+++ b/lv2rdf.css
@@ -1,18 +1,22 @@
-div#ajaxLog div {
+#ajaxDebug {
+  width: 100%;
 }
-div#ajaxTX { height: 3em; }
-div#ajaxRX { height: 10em; }
+div#ajaxTX { height: 2em; }
+div#ajaxRX { height: 5em; }
 
 html {
   height: 100%;
 }
 section {
-  min-width: 40em;
-  max-width: 60em;
-  max-height: 80%;
+  min-width: 20em;
+  max-width: 40em;
+  height: auto;
 }
 form, div.info, div.ports { 
   width: 100%;
+  max-height: 25em;
+  overflow: auto;
+  margin:0;
 }
 div.info, div.ports {
   border: 1px solid grey;
