--- a/lv2rdf.css
+++ b/lv2rdf.css
@@ -1,8 +1,8 @@
 #ajaxDebug {
   width: 100%;
 }
-div#ajaxTX { height: auto; }
-div#ajaxRX { height: auto; }
+div#ajaxTX { height: 3em; }
+div#ajaxRX { height: 10em; }
 
 html {
   height: 100%;
